CSS - fix bad splash screen spacing in some themes

--- a/css/flowplayer.css
+++ b/css/flowplayer.css
@@ -968,6 +968,8 @@
   top: 0;
   left: 0;
   border: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .flowplayer.skin-slim.is-mouseover.is-ready .fp-ui, .flowplayer.skin-slim.is-paused.is-ready .fp-ui, #content .flowplayer.skin-slim.is-paused.is-ready .fp-ui {
